# nn-playground

./: nn-play.cabal
src/: Layer.hs  Main.hs  Network.hs
