name:                nn-play
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/nn-play#readme
license:             BSD3
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          example@example.com
copyright:           2016 Patrik Sandahl
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable nn-play
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Layer
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , vector
  ghc-options:         -Wall
